<resources>
    <string name="app_name">Homework 2</string>
    <string name="pizzaOrder">Pizza order</string>
    <string name="chooseType">Choose Your Pizza Type:</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="bbq">BBQ Chicken</string>
    <string name="margherita">"Margherita "</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="chooseStyle">Choose Pizza Style:</string>
    <string name="smallPrice">Small ($10.29)</string>
    <string name="mediumPrice">Medium ($12.59)</string>
    <string name="largePrice">Large ($14.89)</string>
    <string name="extraToppings">Extra Toppings:</string>
    <string name="extraPricesToppings">(Small $1.39 each, Medium $2.21 each, Large $2.29 each)</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="olives">Olives</string>
    <string name="onions">Onions</string>
    <string name="broccoli">Broccoli</string>
    <string name="spinach">Spinach</string>
    <string name="reset">Reset</string>
    <string name="checkout">Checkout</string>
    <string name="summary">"Summary: "</string>
    <string name="subTotal">"Subtotal: "</string>
    <string name="deliveryFee">Delivery Fee:</string>
    <string name="tax">Tax (6.35%):</string>
    <string name="tip">Tip:</string>
    <string name="totalPrice">Total Price:</string>
    <string name="order">Order</string>
    <string name="editPizza">Edit Pizza</string>
    <string name="quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
</resources>