<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzaOrderActivity">

    <ImageView
        android:id="@+id/imageView_Pizza2"
        android:layout_width="195dp"
        android:layout_height="203dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_crust" />

    <TextView
        android:id="@+id/textView_Summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Pizza2" />

    <Button
        android:id="@+id/button_Order"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout_Labels" />

    <LinearLayout
        android:id="@+id/LinearLayout_Labels"
        android:layout_width="114dp"
        android:layout_height="185dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Summary">

        <TextView
            android:id="@+id/textView_SubtotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/subTotal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_DeliveryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/deliveryFee"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_TaxLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/tax"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_TipLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/tip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_TotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/totalPrice"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_Values"
        android:layout_width="90dp"
        android:layout_height="185dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/LinearLayout_Labels"
        app:layout_constraintStart_toEndOf="@+id/LinearLayout_Labels"
        app:layout_constraintTop_toBottomOf="@+id/textView_Summary">

        <TextView
            android:id="@+id/textView_SubTotalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="$00.00"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/textView_DeliverFeeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="No ($0.00)"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/textView_TaxValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="$0.00"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/textView_TipValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="$0.00"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/textView_TotalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="$0.00"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="114dp"
        android:layout_height="185dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/LinearLayout_Values"
        app:layout_constraintTop_toBottomOf="@+id/textView_Summary">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="TextView"
            android:visibility="invisible" />

        <Switch
            android:id="@+id/switch_Delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView_TipPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:visibility="visible" />

        <SeekBar
            android:id="@+id/seekBar_Tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_ShowType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="Type"
        app:layout_constraintStart_toEndOf="@+id/imageView_Pizza2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_ShowSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="Size"
        app:layout_constraintStart_toEndOf="@+id/imageView_Pizza2"
        app:layout_constraintTop_toBottomOf="@+id/textView_ShowType" />

    <TextView
        android:id="@+id/textView_ShowToppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="X Toppings"
        app:layout_constraintStart_toEndOf="@+id/imageView_Pizza2"
        app:layout_constraintTop_toBottomOf="@+id/textView_ShowSize" />

    <Button
        android:id="@+id/button_EditPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/editPizza"
        app:layout_constraintStart_toEndOf="@+id/textView_ShowType"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="Quantity:"
        app:layout_constraintStart_toEndOf="@+id/imageView_Pizza2"
        app:layout_constraintTop_toBottomOf="@+id/textView_ShowToppings" />

</androidx.constraintlayout.widget.ConstraintLayout>